[project]
name = "vision-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.2.0",
    "rich>=13.9.4",
    "setuptools>=75.8.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "lovely-tensors>=0.1.18",
    "ipykernel==6.29.5",
    "pillow==11.1.0",
    "pre-commit>=4.1.0",
]
